--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -10,8 +10,8 @@ targets:
     petstore:
         target: go
         source: petstore-oas
-        testing:
-            enabled: true
+        # testing:
+        #     enabled: true
         output: .
         codeSamples:
             registry:
