--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -30,7 +30,10 @@ jobs:
       github_access_token: ${{ secrets.GITHUB_TOKEN }}
       speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
   test-petstore:
-    needs: generate  # Ensures this runs AFTER 'generate'
-    uses: ryan-timothy-albert/simple-go-sdk/.github/workflows/sdk_test.yaml@speakeasy-sdk-regen-1738792290  # Ensure this points to sdk-test.yaml's branch
+    needs: generate  # Ensures 'test-petstore' runs AFTER 'generate'
+    uses: ryan-timothy-albert/simple-go-sdk/.github/workflows/sdk_test.yaml@speakeasy-sdk-regen-1738792290  # Replace with correct branch
     with:
       target: petstore
+    secrets:
+      github_access_token: ${{ secrets.GITHUB_TOKEN }}  # Pass explicitly
+      speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}  # Pass explicitly
