--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -26,6 +26,19 @@ jobs:
       mode: pr
       set_version: ${{ github.event.inputs.set_version }}
       target: petstore
-    secrets:
-      github_access_token: ${{ secrets.GITHUB_TOKEN }}
-      speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
+  dispatch-sdk-test:
+    needs: generate  # Ensures 'dispatch-sdk-test' runs AFTER 'generate'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dispatch SDK Test Workflow
+        run: |
+          curl -X POST -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "ref": "${{ github.ref }}",
+              "inputs": {
+                "target": "petstore"
+              }
+            }' \
+            "https://api.github.com/repos/${{ github.repository }}/actions/workflows/sdk-test.yaml/dispatches"
