--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -16,9 +16,9 @@ on:
       - ./**
     branches:
       - main
-  push:
-    branches:
-      - 'speakeasy-sdk-regen-*'
+  # push:
+  #   branches:
+  #     - 'speakeasy-sdk-regen-*'
 concurrency:
   group: ${{ github.ref }}
   cancel-in-progress: true
