--- a/.speakeasy/tests.arazzo.yaml
+++ b/.speakeasy/tests.arazzo.yaml
@@ -1,6 +1,6 @@
 arazzo: 1.0.0
 info:
-  title: Test Suites
+  title: Test Suite
   summary: Created from openapi.json
   version: 0.0.1
 sourceDescriptions:
