--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -20,7 +20,7 @@ on:
     branches:
       - 'speakeasy-sdk-regen-*'
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
   cancel-in-progress: true
 jobs:
   test:
