--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -11,17 +11,12 @@ on:
       target:
         description: Specific target to test
         type: string
+        required: true
   pull_request:
     paths:
       - '**'
     branches:
       - main
-  push:
-    branches:
-      - 'speakeasy-sdk-regen-*'
-concurrency:
-  group: ${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}
-  cancel-in-progress: true
 jobs:
   test:
     uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-test.yaml@v15.39.0
