--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -17,6 +17,11 @@ on:
       - '**'
     branches:
       - main
+  push:
+      branches:
+        - speakeasy-sdk-regen-*
+      paths:
+        - '**'
 jobs:
   test:
     uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-test.yaml@v15.39.0
