--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -20,6 +20,8 @@ on:
   push:
       branches:
         - speakeasy-sdk-regen-*
+  issue_comment:
+    types: [created]
 jobs:
   test:
     uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-test.yaml@v15.39.0
