--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -17,7 +17,7 @@ on:
       - '**'
     branches:
       - main
-  push:
+  push: # if you have setup your own ACTION_PAT feel free to remove this trigger
       branches:
         - speakeasy-sdk-regen-*
 jobs:
