--- a/.github/workflows/sdk_test.yaml
+++ b/.github/workflows/sdk_test.yaml
@@ -17,12 +17,12 @@ on:
       - '**'
     branches:
       - main
-  push: # if you have setup your own ACTION_PAT feel free to remove this trigger
+  push: # if you have setup your own PR_CREATION_PAT feel free to remove this trigger
       branches:
         - speakeasy-sdk-regen-*
 jobs:
   test:
-    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-test.yaml@v15.39.0
+    uses: speakeasy-api/sdk-generation-action/.github/workflows/sdk-test.yaml@v15
     with:
       target: ${{ github.event.inputs.target }}
     secrets:
