--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -28,6 +28,7 @@ jobs:
       mode: pr
       set_version: ${{ github.event.inputs.set_version }}
       target: petstore
+      signed_commits: true
     secrets:
       github_access_token: ${{ secrets.GITHUB_TOKEN }}
       speakeasy_api_key: ${{ secrets.SPEAKEASY_API_KEY }}
