--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -18,7 +18,7 @@ on:
   schedule:
     - cron: 0 0 * * *
   pull_request:
-    types: [labeled, unlabeled]
+    types: [labeled]
 
 jobs:
   generate:
