--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -14,6 +14,8 @@ generation:
   auth:
     oAuth2ClientCredentialsEnabled: true
     oAuth2PasswordEnabled: true
+  tests:
+    generateNewTests: true
 go:
   version: 0.4.0
   additionalDependencies: {}
